# arm-simulator

./: .dir-locals.el  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
inc/: barrel_shifter.hpp  constants.hpp  cpu.hpp  exceptions.hpp  type_definitions.hpp
src/: CMakeLists.txt  barrel_shifter.cpp  cpu.cpp  exceptions.cpp  instruction_decoder.cpp  utils.cpp
